better tests for whaleswap
